custom scrollbar + stopwatch UI

--- a/styles/loginregis.css
+++ b/styles/loginregis.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("../logos/backgroundTiles.png") !important;
+  background-image: url("../backgrounds/backgroundTiles.png") !important;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: fixed;
