--- a/styles/stopwatch.css
+++ b/styles/stopwatch.css
@@ -1,27 +1,40 @@
+#stopwatch {
+  font-size: 100px;
+  color: #35455d;
+}
 
-  .SWbuttons.swbtn {
-    width: 100px;
-    height: 30px;
-    border: 0px;
-    border-radius: 50px;
-    background: #35455d;
-    color: white;
-    cursor: pointer;
-    
+.SWbuttons > .swbtn {
+  border: 2px solid;
+  transition: 0.2s ease-in-out;
+}
+
+#stopwatchContainer {
+  margin-top: 5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #stopwatch {
-    font-size: 100px;
-    position: absolute;
-    top: 45%;
-    left: 50%;
-    transform: translate(-50%, -55%);
-    color: #35455d;
+  margin-bottom: 2rem;
 }
 
-.SWbuttons{
-    position: absolute;
-    top: 55%;
-    left: 50%;
-    transform: translate(-51.6%, -45%);
+#startBtn {
+  background-color: rgb(21, 185, 76);
+}
+
+#stopBtn {
+  background-color: rgb(214, 40, 40);
+}
+
+#startBtn:hover {
+  border-color: rgb(21, 185, 76);
+  background-color: white;
+  color: rgb(21, 185, 76);
+}
+
+#stopBtn:hover {
+  border-color: rgb(214, 40, 40);
+  background-color: white;
+  color: rgb(214, 40, 40);
 }
